<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cz.alois-seckar.java</groupId>
    <artifactId>JavaDemos</artifactId>
    <version>23.0</version>
    <packaging>jar</packaging>
    
    <properties>
        <java.version>23</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <!-- for simplier getter/setter/constructor declarations -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <!-- adding MANIFEST.MF to .jar -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.javademos.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <!-- responsible for performing .jar build -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <release>23</release>
                    <compilerArgs>
                        <!-- allows 'preview' features -->
                        <arg>--enable-preview</arg>
                        <!-- allows newest 'incubator' features -->
                        <arg>--add-modules=jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <!-- responsible for generating Javadocs in HTML format -->
                <!-- standalone command: mvn clean javadoc:javadoc -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <source>23</source>
                    <additionalOptions>
                        <!-- allows 'preview' features -->
                        <additionalOption>--enable-preview</additionalOption>
                        <!-- allows newest 'incubator' features -->
                        <additionalOption>--add-modules=jdk.incubator.vector</additionalOption>
                        <!-- to skip errors for lombok-generated constructors -->
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>